[gd_scene load_steps=11 format=3 uid="uid://dwf5wbndk8lay"]

[ext_resource type="Script" path="res://umbrella.gd" id="1_c6sjo"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_kh4rp"]
polygon = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvr3p"]
size = Vector2(4, 133.1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u46jr"]
size = Vector2(136, 4)

[sub_resource type="Gradient" id="Gradient_hl3xp"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_iwr8v"]
gradient = SubResource("Gradient_hl3xp")
width = 128
height = 128

[sub_resource type="Gradient" id="Gradient_5vphg"]
offsets = PackedFloat32Array(0, 0.916667, 1)
colors = PackedColorArray(1, 1, 1, 0, 0.682353, 0.666667, 1, 0, 0.923056, 1, 0.96927, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5vibm"]
gradient = SubResource("Gradient_5vphg")
width = 128
height = 128
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08lop"]
size = Vector2(132, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqwkv"]
size = Vector2(128, 128)

[node name="Umbrella" type="StaticBody2D" node_paths=PackedStringArray("umbrella_glow")]
position = Vector2(10, 17)
script = ExtResource("1_c6sjo")
umbrella_glow = NodePath("SpriteTop")
outside_color = Color(0, 0, 0, 0.835294)

[node name="Left" type="ColorRect" parent="."]
offset_left = -128.0
offset_top = -44.0
offset_right = -88.0
offset_bottom = -4.0

[node name="Right" type="ColorRect" parent="."]
offset_left = -128.0
offset_top = -44.0
offset_right = -88.0
offset_bottom = -4.0

[node name="Bottom" type="ColorRect" parent="."]
offset_left = -128.0
offset_top = -44.0
offset_right = -88.0
offset_bottom = -4.0

[node name="Top" type="ColorRect" parent="."]
offset_left = -128.0
offset_top = -44.0
offset_right = -88.0
offset_bottom = -4.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_kh4rp")

[node name="LeftCollision" type="CollisionShape2D" parent="."]
position = Vector2(-66, 1.45)
shape = SubResource("RectangleShape2D_lvr3p")

[node name="RightCollision" type="CollisionShape2D" parent="."]
position = Vector2(66, 3.8147e-06)
shape = SubResource("RectangleShape2D_lvr3p")

[node name="BottomCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 66)
shape = SubResource("RectangleShape2D_u46jr")

[node name="TopCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -66)
shape = SubResource("RectangleShape2D_u46jr")

[node name="PointLight2D" type="PointLight2D" parent="."]
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_iwr8v")

[node name="SpriteTop" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.247059)
texture = SubResource("GradientTexture2D_5vibm")

[node name="MoveDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveDetector"]
position = Vector2(0, 72)
shape = SubResource("RectangleShape2D_08lop")

[node name="EnemyBlocker" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBlocker"]
shape = SubResource("RectangleShape2D_oqwkv")

[connection signal="body_entered" from="MoveDetector" to="." method="_on_move_detector_body_entered"]
[connection signal="body_exited" from="MoveDetector" to="." method="_on_move_detector_body_exited"]
